--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,19 @@
       <version>${jiujichina-common-core.version}</version> 
     </dependency>
     
+     <dependency>
+      <groupId>com.jiujichina</groupId>
+      <artifactId>jiujichina-common-activiti</artifactId>
+      <version>${jiujichina-common-activiti.version}</version> 
+    </dependency>
+    
+     <dependency>
+      <groupId>com.jiujichina</groupId>
+      <artifactId>jiujichina-jiuji-vo</artifactId>
+      <version>${jiujichina-jiuji-vo.version}</version> 
+    </dependency>
+    
+    
     <dependency>
       <groupId>com.jiujichina</groupId>
       <artifactId>jiujichina-jiuji-facade-tbhot</artifactId>
